--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oxygenix Tech Solutions | Innovative Technology Services</title>
-    <meta name="description" content="Oxygenix Tech Solutions provides cutting-edge technology services, software development, IT consulting, and digital transformation solutions for businesses." />
+    <title>Xygenix Tech Solutions | Innovative Technology Services</title>
+    <meta name="description" content="Xygenix Tech Solutions provides cutting-edge technology services, software development, IT consulting, and digital transformation solutions for businesses." />
     <meta name="author" content="Oxygenix Tech Solutions" />
 
-    <meta property="og:title" content="Oxygenix Tech Solutions | Innovative Technology Services" />
-    <meta property="og:description" content="Oxygenix Tech Solutions provides cutting-edge technology services, software development, IT consulting, and digital transformation solutions for businesses." />
+    <meta property="og:title" content="Xygenix Tech Solutions | Innovative Technology Services" />
+    <meta property="og:description" content="Xygenix Tech Solutions provides cutting-edge technology services, software development, IT consulting, and digital transformation solutions for businesses." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
